--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Login">
         <activity
-            android:name=".view.LoginActivity"
+            android:name=".view.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".view.MainActivity"/>
         <activity android:name=".view.SignUpActivity"/>
+        <activity android:name=".view.LoginActivity"/>
     </application>
 
 </manifest>
