--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,11 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.2.1'
 
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:3.8.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
 
