first output(glide)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ android {
     }
 }
 
+
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
@@ -38,11 +40,13 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.2.1'
 
-    implementation 'com.github.bumptech.glide:glide:3.8.0'
-    //annotationProcessor 'com.github.bumptech.glide:compiler:3.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
 
 }
 
