--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Login">
         <activity
+            android:screenOrientation="portrait"
             android:name=".view.SplashActivity"
             android:exported="true">
             <intent-filter>
@@ -20,9 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.MainActivity"/>
-        <activity android:name=".view.SignUpActivity"/>
-        <activity android:name=".view.LoginActivity"/>
+        <activity android:name=".view.MainActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".view.SignUpActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".view.LoginActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
